# mktimeline

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: code-quality.yml  release.yml
src/mktimeline/: __init__.py
src/mktimeline/console/: application.py
src/mktimeline/console/commands/: __init__.py  about.py  build.py  export_timeline.py  import_timeline.py  init.py
src/mktimeline/events/: event.py
src/mktimeline/templates/: template.html
src/mktimeline/timeline/: project.py
tests/: test_event.py  test_mktimeline.py
tests/test-data/test-events/: timeline_project.yml  title.md
tests/test-data/test-events/events/1876--_west_publishing_company/: 1876--_west_publishing_company.md
tests/test-data/test-events/events/1882--_lawyers_cooperative_publishing_lcp_/: 1882--_lawyers_cooperative_publishing_lcp_.md
