[tool.poetry]
name = "mktimeline"
version = "0.1.0"
description = ""
authors = ["John Duprey <297628+jduprey@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/jduprey/mktimeline"
repository = "https://github.com/jduprey/mktimeline"
documentation = "https://github.com/jduprey/mktimeline/blob/master/README.md"

keywords = ["timeline", "edit", "author"]

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.5"
bs4 = "^0.0.1"
frontmatter = "^3.0"
markdown = "^3.1"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.scripts]
mktimeline = "mktimeline.console.application:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
