[tool.poetry]
name = "mktimeline"
version = "0.1.2"
description = ""
authors = ["John Duprey <297628+jduprey@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/jduprey/mktimeline"
repository = "https://github.com/jduprey/mktimeline"
documentation = "https://github.com/jduprey/mktimeline/blob/master/README.md"

keywords = ["timeline", "edit", "author"]

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = ">=3.8.1"
cleo = "^0.8.1"
Jinja2 = "^3.1.2"
Markdown = "^3.4.1"
frontmatter = "^3.0.7"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^23.1.0"


[tool.poetry.scripts]
mktimeline = "mktimeline.console.application:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
