[project]
name = "mktimeline"
version = "0.1.4"
description = "Make a timeline from markdown files."
readme = "README.md"
authors = [
    { name = "John Duprey", email = "297628+jduprey@users.noreply.github.com" },
]
keywords = ["timeline", "edit", "author"]
homepage = "https://github.com/jduprey/mktimeline"
repository = "https://github.com/jduprey/mktimeline"
documentation = "https://github.com/jduprey/mktimeline/blob/master/README.md"

requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.12.3",
    "cleo>=2.1.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = ["pytest>=8.3.3", "ruff>=0.8.0"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
fix = true

[tool.uv.workspace]
members = ["X"]

[project.scripts]
mktimeline = "mktimeline.console.application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
